added express package, which affect package.json only, but the node folder was ignored because we told git to do so in the initial repo setup in gitignore, anyone else pulling the repo, can run npm install to add dependendcies

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Atracto/FirstRepo/issues"
   },
-  "homepage": "https://github.com/Atracto/FirstRepo#readme"
+  "homepage": "https://github.com/Atracto/FirstRepo#readme",
+  "devDependencies": {
+    "express": "^4.14.0"
+  }
 }
